Opened 13 years ago
Closed 13 years ago
#2477 closed defect (fixed)
libswscale make error (--disable-optimization)
| Reported by: | Andrew | Owned by: | |
|---|---|---|---|
| Priority: | minor | Component: | swscale |
| Version: | git-master | Keywords: | build regression |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
$ ./configure --disable-optimization In file included from libswscale/x86/rgb2rgb.c:98: libswscale/x86/rgb2rgb_template.c: In function ‘rgb24toyv12_MMX’: libswscale/x86/rgb2rgb_template.c:1695: error: can't find a register in class ‘GENERAL_REGS’ while reloading ‘asm’ libswscale/x86/rgb2rgb_template.c:1695: error: ‘asm’ operand has impossible constraints make: *** [libswscale/x86/rgb2rgb.o] Error 1 % ./version.sh N-52233-gee94362 % gcc -v Using built-in specs. Target: i486-linux-gnu Configured with: ../src/configure -v --with-pkgversion='Debian 4.4.5-8' --with-bugurl=file:///usr/share/doc/gcc-4.4/README.Bugs --enable-languages=c,c++,fortran,objc,obj-c++ --prefix=/usr --program-suffix=-4.4 --enable-shared --enable-multiarch --enable-linker-build-id --with-system-zlib --libexecdir=/usr/lib --without-included-gettext --enable-threads=posix --with-gxx-include-dir=/usr/include/c++/4.4 --libdir=/usr/lib --enable-nls --enable-clocale=gnu --enable-libstdcxx-debug --enable-objc-gc --enable-targets=all --with-arch-32=i586 --with-tune=generic --enable-checking=release --build=i486-linux-gnu --host=i486-linux-gnu --target=i486-linux-gnu Thread model: posix gcc version 4.4.5 (Debian 4.4.5-8)
config.h - included.
Attachments (3)
Change History (5)
by , 13 years ago
by , 13 years ago
| Attachment: | config.log added |
|---|
by , 13 years ago
| Attachment: | config.asm added |
|---|
comment:1 by , 13 years ago
| Keywords: | build regression added; swscale make error removed |
|---|---|
| Reproduced by developer: | set |
| Status: | new → open |
comment:2 by , 13 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
Fixed in git head, thank you for the report.
Note:
See TracTickets
for help on using tickets.



Regression since 3950236, patch sent but see ticket #1932 for a reason why this may not be fixed.
(On some architectures, --disable-optimizations needs --disable-asm)