Fix libswscale compilation with --disable-optimizations on x86-32.

Fixes ticket #2477.